--- a/src/components/sidebar/dimension-card/styles/dimension-card.module.css
+++ b/src/components/sidebar/dimension-card/styles/dimension-card.module.css
@@ -5,9 +5,17 @@
     border: 1px solid var(--colors-grey400);
     border-radius: 5px;
 }
+.container.hasNotice {
+    border-end-start-radius: 0;
+    border-end-end-radius: 0;
+}
 .container.isDisabled {
     border-color: var(--colors-grey300);
-    background-color: var(--colors-grey050);
+    background-color: color-mix(
+        in srgb,
+        var(--colors-white) 50%,
+        transparent 50%
+    );
 }
 .container:not(.isDisabled):hover {
     border-color: #b7c4d2;
